--- a/web/vaseis dedomenwn/styles.css
+++ b/web/vaseis dedomenwn/styles.css
@@ -4,8 +4,17 @@ body {
     background-color: #f3f3f3;
     margin-left: 0;
     margin-right: 0; /*για να κάθεται καλά το navbar*/
+
 }
 
+h1 {
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 40px;
+    font-weight: bold;
+    color: #555;
+}
 /*πίνακας σε σελίδα προβολής*/
 table {
     border-collapse: collapse;
@@ -166,12 +175,12 @@ input[type=submit][class=delete]:hover {
     text-align: left;
 }
 
-/* */
+/* navbar */
 
 .navbar {
-    margin-top: -10px;
+    margin-top: -8px;
     overflow: hidden;
-    background-color: #313131;
+    background-color: #282828;
     width: 100%; /* Set the width to 100% */
 }
   
@@ -226,14 +235,165 @@ input[type=submit][class=delete]:hover {
   /*hover στο dropdown*/
   .dropdown-content a:hover {
     background-color: #ededed;
+    z-index: 5;
   }
   
   .dropdown:hover .dropdown-content {
     display: block;
+        z-index: 5;
+
   }
+
+
+
 
 /* αστερισκό στα required πεδία που έχουν κλάση required στο label */
 .required::after {
     content: ' *';
     color: red;
 }
+
+
+
+
+
+/* homepage */
+
+/*για να μην scrollαρει η σελιδα στο homepage μονο*/
+#homepage_body
+{
+     position: relative;
+  margin: auto;
+  overflow: hidden;
+  height: 100vh; /* 100% of the viewport height */
+}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 100%;
+  position: relative;
+  margin: auto;
+  overflow: hidden;
+  height: 100vh; /* 100% of the viewport height */
+    z-index: 2;
+    background-color: #020202;
+
+}
+
+
+/*εικόνες του slideshow */
+#home_image {
+    width: 100%;
+    object-fit: cover;
+    position: absolute;
+    height: 100vh; 
+    top: 0;
+    left: 0;
+    filter: blur(5px);
+
+}
+
+/* Caption text */
+.home_caption {
+  color: #ffffff;
+  font-size: 15em;
+  padding: 8px 12px;
+  position: absolute;
+  top: 20%;
+  width: 100%;
+  text-align: center;
+  font-weight: bold;
+  z-index: 3;
+  text-shadow: #262626 5px 5px 10px;
+  opacity: 0.4;
+  transition:  0.6s ease;
+
+}
+
+#caption_title
+{
+    font-size: 10em;
+
+}
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(rgb(0, 0, 0), rgba(14, 14, 14, 0.5));
+    opacity: 0.7; 
+    z-index: 2;
+
+  }
+  
+
+/* The dots/bullets/indicators */
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #afafafdb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+  
+}
+
+#dots-container {
+    position: absolute;
+    bottom: 8%;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 3;
+    mix-blend-mode: overlay;
+}
+
+.active {
+  background-color: #e5e5e5d7;
+}
+
+/* Fading animation */
+.fade {
+    animation-name: fade;
+    animation-duration: 2.5s;
+    animation-timing-function: ease-in-out;
+}
+
+@keyframes fade {
+    0% {
+        opacity: 0.5;
+    }
+    
+    100% {
+        opacity: 1;
+    }
+    
+}
+
+
+
+@media only screen and (max-width: 600px) {
+    .home_caption {
+        font-size: 5em;
+      }
+      
+      #caption_title
+      {
+          font-size: 6em;
+      
+      }
+}
+
+@media only screen and (min-width: 601px) and (max-width: 1024px) {
+    .home_caption {
+        font-size: 6em;
+      }
+      
+      #caption_title
+      {
+          font-size: 7em;
+      
+      }
+}
+
